# graph-sdk

./: .cargo-deny.toml  .gitignore  .rustfmt.toml  .tool-versions  Cargo.toml  Makefile  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.base.json
.cargo/: config.toml
.github/: pull_request_template.md  verify.yml
.github/workflows/: pr-verify.yml  release.yml  release_java.yml  release_node.yml
bridge/common/: Cargo.toml  build.rs
bridge/common/protos/: input.proto  output.proto
bridge/common/src/proto_types/: input.rs  mod.rs  output.rs
bridge/ffi/: Cargo.toml  cbindgen.toml
bridge/ffi/src/: bindings.rs  c_api.rs  errors.rs  lib.rs  utils.rs
bridge/ffi/src/c_example/: Makefile  dsnp_graph_sdk_ffi.h  graph_sdk_ffi.h  main.c  main.cpp
bridge/ffi/src/tests/: graph_sdk_ffi.h  mod.rs  tests.rs
bridge/jni/: Cargo.toml  cargo.toml  cbindgen.toml
bridge/jni/src/: api.rs  errors.rs  helper.rs  lib.rs  logger.rs  mappings.rs
bridge/node/: .eslintrc.js  .prettyignore  Cargo.toml  README.md  build.rs  downloadBinaries.js  dsnp-graph-sdk-0.0.3.tgz  jest.config.js  package-lock.json  package.json  tsconfig.json
bridge/node/js/: graph.test.ts  graph.ts  import-bundle-builder.spec.ts  import-bundle-builder.test.ts  import-bundle-builder.ts  index.test.ts  index.ts
bridge/node/js/models/: action.ts  config.ts  connection.ts  environment.ts  graph_edge.ts  import_bundle.ts  index.ts  keys.ts  public_keys.ts  update.ts
bridge/node/node-example-client/: index.ts  package-lock.json  package.json  tsconfig.json
bridge/node/src/: api.rs  helper.rs  index.ts  lib.rs
config/: Cargo.toml  README.md
config/resources/configs/: frequency-rococo.json  frequency-testnet-paseo.json  frequency.json
config/resources/schemas/: public_key_schema.json  user_private_graph_chunk.json  user_public_graph_chunk.json
config/src/: builder.rs  errors.rs  lib.rs
core/: Cargo.toml  README.md
core/core/src/graph/: page_capacities.rs
core/src/: api.rs  lib.rs  schema.rs  types.rs
core/src/api/: api.rs  api_types.rs  mod.rs
core/src/benches/: mod.rs  page_size.rs
core/src/dsnp/: api_types.rs  compression.rs  dsnp_configs.rs  dsnp_types.rs  encryption.rs  graph_page.rs  mod.rs  pseudo_relationship_identifier.rs  reader_writer.rs  schema.rs
core/src/dsnp/tests/: compression.rs  dsnp_types.rs  encryption.rs  graph_page.rs  helpers.rs  mod.rs  pseudo_relationship_identifier.rs  schema.rs
core/src/ffi/: c_api.rs  graph_sdk_ffi.h  mod.rs
core/src/frequency/: config.rs  mod.rs  reader_writer.rs
core/src/frequency/tests/: config.rs  mod.rs  reader_writer.rs
core/src/graph/: graph.rs  helpers.rs  key_manager.rs  mod.rs  page.rs  page_capacities.rs  pri_manager.rs  shared_state_manager.rs  test_helpers.rs  updates.rs  user.rs
core/src/tests/: helpers.rs  mocks.rs
core/src/util/: builders.rs  mod.rs  time.rs  transactional_hashmap.rs  transactional_vec.rs
core/tests/: integration_tests.rs
core/tests/common/: mod.rs
docs/examples/: basic-flow.md  java-examples.md  rust-examples.md
ffi/: Cargo.toml  cbindgen.toml  graph_sdk_ffi.h
ffi/src/: bindings.rs  c_api.rs  lib.rs  tests.rs
ffi/src/tests/: graph_sdk_ffi.h  main  main.c  tests.c
java/: .gitignore  frequency_Native.h  settings.gradle  settings.gradle.kts
java-lib-test/: build.gradle.kts  settings.gradle.kts
java-lib-test/src/test/kotlin/io/amplica/graphsdk/: LibraryTest.kts
java/example-graphsdk-client/: build.gradle.kts  settings.gradle.kts
java/example-graphsdk-client/src/test/kotlin/io/amplica/graphsdk/: LibraryTest.kts
java/lib/: build.gradle  build.gradle.kts
java/lib/src/main/java/frequency/: Logger.java  Native.java  NativeHandleGuard.java
java/lib/src/main/java/io/amplica/graphsdk/: Configuration.java  Graph.java  Logger.java  Native.java  NativeHandleGuard.java
java/lib/src/main/java/io/amplica/graphsdk/exceptions/: AcquiringLockException.java  BaseGraphSdkException.java  GraphSdkException.java  InvalidHandleException.java  InvalidOutputException.java  InvalidProtoException.java  InvalidRequestException.java  JniException.java  UnexpectedResponseException.java  UnknownException.java
java/lib/src/main/java/io/amplica/graphsdk/models/: Actions.java  ActionsOrBuilder.java  Config.java  ConfigOrBuilder.java  Connection.java  ConnectionOrBuilder.java  ConnectionType.java  DsnpGraphEdges.java  DsnpGraphEdgesOrBuilder.java  DsnpKeys.java  DsnpKeysOrBuilder.java  DsnpPublicKeys.java  DsnpPublicKeysOrBuilder.java  DsnpUsers.java  DsnpUsersOrBuilder.java  DsnpVersion.java  Environment.java  EnvironmentOrBuilder.java  EnvironmentType.java  GraphKeyType.java  ImportBundles.java  ImportBundlesOrBuilder.java  Input.java  KeyData.java  KeyDataOrBuilder.java  Output.java  PageData.java  PageDataOrBuilder.java  PrivacyType.java  SchemaConfig.java  SchemaConfigOrBuilder.java  Updates.java  UpdatesOrBuilder.java
java/lib/src/main/java/io/projectliberty/graphsdk/: Configuration.java  Graph.java  Logger.java  Native.java  NativeHandleGuard.java
java/lib/src/main/java/io/projectliberty/graphsdk/exceptions/: AcquiringLockException.java  BaseGraphSdkException.java  GraphSdkException.java  InvalidHandleException.java  InvalidOutputException.java  InvalidProtoException.java  InvalidRequestException.java  JniException.java  UnexpectedResponseException.java  UnknownException.java
java/lib/src/test/java/amplica/graphsdk/: LibraryTest.java
java/lib/src/test/java/frequency/: LibraryTest.java
java/lib/src/test/java/io/amplica/graphsdk/: LibraryTest.java
java/lib/src/test/java/io/projectliberty/graphsdk/: LibraryTest.java
log-result-proc-macro/: Cargo.toml
log-result-proc-macro/src/: lib.rs
schemas/: public_graph.json  public_key_schema.json  user_private_graph_chunk.json
scripts/: build_jni.sh  build_protos.sh  install_jni.sh  run_bindgen.sh  run_ffi_tests.sh
simulator/: Cargo.toml  README.md
simulator/src/: constants.rs  init.rs  main.rs  types.rs
simulator/src/scenarions/: common.rs  key_rotation.rs
simulator/src/scenarios/: common.rs  key_rotation.rs  mod.rs
(+33 files in other folders)
