[workspace]
members = [
    "core",
    "config",
    "bridge/ffi",
    "bridge/jni",
    "log-result-proc-macro",
    "bridge/node",
]

default-members = [
    "core",
    "config",
    "bridge/ffi",
    "bridge/jni",
    "bridge/node",
    "log-result-proc-macro",
]

[profile.release]
panic = "unwind"
debug = true

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
strip = true
