[workspace]
members = [
    "core",
    "config",
    "bridge/ffi",
    "bridge/jni",
    "log-result-proc-macro",
    "bridge/node",
    "simulator"
]

default-members = [
    "core",
    "config",
    "bridge/ffi",
    "bridge/jni",
    "bridge/node",
    "log-result-proc-macro",
]
resolver = "2"

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
strip = true
opt-level = "z"
