[package]
name = "dsnp-graph-config"
edition = "2021"
homepage = "https://spec.dsnp.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/libertyDSNP/graph-sdk/"
version = "0.1.0"

[lib]
name = "dsnp_graph_config"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.40"
apache-avro = { version = "0.14.0", features = ["snappy"] }
lazy_static = "1.4.0"
log = { version = "^0.4.17", features = ["std", "max_level_debug", "release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
thiserror = "1.0.24"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-log = "^0.2.11"
env_logger = "^0.10.0"

[features]
calculate-page-capacity = []
