[package]
name = "dsnp-graph-config"
edition = "2021"
homepage = "https://spec.dsnp.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/libertyDSNP/graph-sdk/"
version = "1.0.2"

[lib]
name = "dsnp_graph_config"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.80"
apache-avro = { version = "0.16.0", features = ["snappy"] }
lazy_static = "1.4.0"
log = { version = "^0.4.21", features = ["std", "max_level_debug", "release_max_level_debug"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
thiserror = "1.0.57"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-log = "^0.2.15"
env_logger = "^0.11.2"

[features]
calculate-page-capacity = []
