[package]
name = "dsnp-graph-config"
edition = "2021"
homepage = "https://spec.dsnp.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/ProjectLibertyLabs/graph-sdk/"
version = "2.0.0"

[lib]
name = "dsnp_graph_config"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.86"
apache-avro = { version = "0.17.0", features = ["snappy"] }
lazy_static = "1.5.0"
log = { version = "^0.4.22", features = ["std", "max_level_debug", "release_max_level_debug"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
thiserror = "1.0.63"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-log = "^0.2.16"
env_logger = "^0.11.5"

[features]
calculate-page-capacity = []
