[package]
name = "dsnp-graph-core"
edition = "2021"
homepage = "https://spec.dsnp.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/libertyDSNP/graph-sdk/"
version = "0.1.0"

[lib]
name = "dsnp_graph_core"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.69"
apache-avro = { version = "0.14.0", features = ["snappy"] }
dryoc = "0.4.3"
dsnp-graph-config = { version = "0.1.0", path = "../config" }
lazy_static = "1.4.0"
log = { version = "^0.4.17", features = ["std", "max_level_debug", "release_max_level_debug"] }
log-result-proc-macro = { path = "../log-result-proc-macro" }
miniz_oxide = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.9"
serde_with = "2.3.2"
thiserror = "1.0.39"
wasm-bindgen = {version = "0.2.63", optional = true}
zeroize = "1.5.7"

[dev-dependencies]
pretty_assertions = "1.3.0"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.21.0"
ntest = "0.7.3"
log = "0.4.17"
env_logger = "^0.10.0"
ctor = "^0.2.2"

[features]
wasm = ["wasm-bindgen"]
calculate-page-capacity = []
