[package]
name = "dsnp-graph-core"
edition = "2021"
homepage = "https://spec.dsnp.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/libertyDSNP/graph-sdk/"
version = "1.1.0"

[lib]
name = "dsnp_graph_core"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.69"
apache-avro = { version = "0.16.0", features = ["snappy"] }
dryoc = "0.5.3"
dsnp-graph-config = { version = "1.1.0", path = "../config" }
lazy_static = "1.4.0"
log = { version = "^0.4.21", features = ["std", "max_level_debug", "release_max_level_debug"] }
log-result-proc-macro = { path = "../log-result-proc-macro" }
miniz_oxide = "0.7.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_with = "3.6.1"
serde_json = "1.0.114"
thiserror = "1.0.57"
wasm-bindgen = {version = "0.2.92", optional = true}
zeroize = "1.7.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.0"
ntest = "0.9.0"
log = "0.4.21"
env_logger = "^0.11.2"
ctor = "^0.2.7"
memory-stats = "1.1.0"

[features]
wasm = ["wasm-bindgen"]
calculate-page-capacity = []
