[package]
name = "dsnp-graph-core"
edition = "2021"
homepage = "https://spec.dsnp.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/ProjectLibertyLabs/graph-sdk/"
version = "1.1.4"

[lib]
name = "dsnp_graph_core"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0.86"
apache-avro = { version = "0.17.0", features = ["snappy"] }
dryoc = "0.5.4"
dsnp-graph-config = { version = "1.1.4", path = "../config" }
lazy_static = "1.5.0"
log = { version = "^0.4.22", features = ["std", "max_level_debug", "release_max_level_debug"] }
log-result-proc-macro = { path = "../log-result-proc-macro" }
miniz_oxide = "0.7.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
serde_with = "3.9.0"
serde_json = "1.0.122"
thiserror = "1.0.63"
wasm-bindgen = {version = "0.2.92", optional = true}
zeroize = "1.8.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.1"
ntest = "0.9.3"
log = "0.4.22"
env_logger = "^0.11.5"
ctor = "^0.2.8"
memory-stats = "1.2.0"

[features]
wasm = ["wasm-bindgen"]
calculate-page-capacity = []
