[package]
name = "graph-sdk-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "graph_sdk_ffi"
crate-type = ["staticlib"]

[dependencies]
dsnp-graph-core = { version = "0.1.0", path = "../core" }
dsnp-graph-config = { version = "0.1.0", path = "../config" }
libc = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"