[package]
name = "log-result-proc-macro"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
log = { version = "^0.4.22", features = ["std", "max_level_debug", "release_max_level_debug"] }
