[package]
name = "dsnp-graph-sdk-common"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
dsnp-graph-core = { version = "1.0.0", path = "../../core" }
dsnp-graph-config = { version = "1.0.0", path = "../../config" }
libc = "0.2.153"
protobuf = { version = "3.4.0", features = ["with-bytes"] }
