[package]
name = "dsnp-graph-sdk-common"
version = "1.1.4"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
dsnp-graph-core = { version = "1.1.4", path = "../../core" }
dsnp-graph-config = { version = "1.1.4", path = "../../config" }
libc = "0.2.155"
protobuf = { version = "3.5.0", features = ["with-bytes"] }
