[package]
name = "dsnp-graph-sdk-ffi"
version = "2.0.1"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "dsnp_graph_sdk_ffi"
crate-type = ["staticlib"]

[dependencies]
dsnp-graph-core = { version = "2.0.1", path = "../../core" }
dsnp-graph-config = { version = "2.0.1", path = "../../config" }
libc = "0.2.155"
lazy_static = "1.5.0"
anyhow = "1.0.86"
