[package]
name = "dsnp-graph-sdk-node"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false
exclude = ["dsnp_graph_sdk_node.node"]

[lib]
name = "dsnp_graph_sdk_node"
crate-type = ["cdylib"]

[dependencies]
dsnp-graph-core = { version = "1.0.0", path = "../../core" }
dsnp-graph-config = { version = "1.0.0", path = "../../config" }
neon = { version = "0.10.1", default-features = false, features = ["napi-6"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
once_cell = "1.18.0"
