[package]
name = "dsnp-graph-sdk-node"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
publish = false
exclude = ["dsnp_graph_sdk_node.node"]

[lib]
name = "dsnp_graph_sdk_node"
crate-type = ["cdylib"]

[dependencies]
dsnp-graph-core = { version = "1.0.2", path = "../../core" }
dsnp-graph-config = { version = "1.0.2", path = "../../config" }
neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
once_cell = "1.19.0"
