[package]
name = "dsnp-graph-sdk-node"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
publish = false
exclude = ["dsnp_graph_sdk_node.node"]

[lib]
name = "dsnp_graph_sdk_node"
crate-type = ["cdylib"]

[dependencies]
dsnp-graph-core = { version = "2.0.0", path = "../../core" }
dsnp-graph-config = { version = "2.0.0", path = "../../config" }
neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
once_cell = "1.19.0"
